Fix broken images

--- a/accessible-website-design.html
+++ b/accessible-website-design.html
@@ -201,7 +201,7 @@ permalink: /accessible-website-design/
 
                 <p>There are many tools available, such as <a href="https://colors.dopely.top/contrast-checker/" target="_blank" rel="noopener noreferrer">Dopely's Contrast Checker</a>, to help you determine the contrast ratio between two colours. The contrast checker shows the results for two success criteria, AA and AAA. Aim to get a green checkmark for both sizes of text in the AA criterion, and the large text in the AAA criterion. If all criteria are green, even better. A good contrast ratio would be 4.5:1 and above.</p>
 
-                <img class="screenshot" src="images/contrast-ratio.png" alt="Contrast ratio">
+                <img class="screenshot" src="https://sybiltec.com/images/contrast-ratio.png" alt="Contrast ratio">
 
                 <h2>2. Text Size</h2>
 
@@ -244,7 +244,7 @@ permalink: /accessible-website-design/
 
                 <p>When the UserWay widget is installed, you'll see the icon below at the bottom of your site. Clicking the icon reveals the menu of accessibility features.</p>
 
-                <img src="images/man.png" alt="Man icon for accessibility">
+                <img src="https://sybiltec.com/images/man.png" alt="Man icon for accessibility">
 
                 <h2>Conclusion</h2>
 
