--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -205,27 +205,27 @@ permalink: /backup-wordpress-website-using-updraftplus/
 
                 <ol>
                     <li>From the WordPress admin, go to <em>Plugins</em> > <em>Add New Plugin</em>.</li>
-                    <img class="screenshot" src="images/screenshots/add-new-plugin.png" alt="Add new plugin in WordPress">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/add-new-plugin.png" alt="Add new plugin in WordPress">
                     <li>In the search box, type in <strong>UpdraftPlus</strong>.</li>
-                    <img class="screenshot" src="images/screenshots/add-plugins.png" alt="Add plugins in WordPress">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/add-plugins.png" alt="Add plugins in WordPress">
                     <li>Activate the plugin.</li>
-                    <img class="screenshot" src="images/screenshots/activate-plugin.png" alt="Activate plugin">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/activate-plugin.png" alt="Activate plugin">
                     <li>Click <em>Press here to start!</em></li>
-                    <img class="screenshot" src="images/screenshots/press-here-to-start.png" alt="Press here to start!">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/press-here-to-start.png" alt="Press here to start!">
                     <li>Click the <em>Settings</em> tab.</li>
-                    <img class="screenshot" src="images/screenshots/settings-tab.png" alt="UpdraftPlus Settings tab">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/settings-tab.png" alt="UpdraftPlus Settings tab">
                     <li>Choose a remote storage location, then click <em>Save Changes</em> in the top right-hand corner. Please note that the following steps use Google Drive as an example location for storing the backups. If you choose a different option, the process will vary.</li>
-                    <img class="screenshot" src="images/screenshots/choose-your-remote-storage.png" alt="Choose your remote storage">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/choose-your-remote-storage.png" alt="Choose your remote storage">
                     <li>This box will appear. Click <em>Sign in with Google</em>.</li>
-                    <img class="screenshot" src="images/screenshots/remote-storage-authentication.png" alt="Remote storage authentication">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/remote-storage-authentication.png" alt="Remote storage authentication">
                     <li>Select the Google account you want the backups to be stored in.</li>
-                    <img class="screenshot" src="images/screenshots/choose-an-account.png" alt="Choose a Google account">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/choose-an-account.png" alt="Choose a Google account">
                     <li>Click <em>Allow</em>.</li>
-                    <img class="screenshot" src="images/screenshots/updraftplus-wants-to-access-your-google-account.png" alt="UpdraftPlus wants to access your Google ">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/updraftplus-wants-to-access-your-google-account.png" alt="UpdraftPlus wants to access your Google ">
                     <li>You will see this screen. Click <em>Complete setup</em>.</li>
-                    <img class="screenshot" src="images/screenshots/updraft-plus-complete-setup.png" alt="Complete setup">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/updraft-plus-complete-setup.png" alt="Complete setup">
                     <li>Click the <em>Backup Now</em> button. How long the process takes to complete depends on the amount of content your website has. Your backup files will be stored in a new folder in Google Drive, called <em>UpdraftPlus</em>.</li>
-                    <img class="screenshot" src="images/screenshots/backup-now.png" alt="Backup Now button">
+                    <img class="screenshot" src="https://sybiltec.com/images/screenshots/backup-now.png" alt="Backup Now button">
                 </ol>
 
                 <h2>Best Practices</h2>
