--- a/clients.html
+++ b/clients.html
@@ -171,7 +171,7 @@ permalink: /clients/
                 <div id="cnt-associates" class="shadow-box">
                     <div class="row">
                         <div class="col-4">
-                            <img src="images/clients/CNT-Associates-2.jpg" alt="CNT Associates website">
+                            <img src="https://sybiltec.com/images/clients/CNT-Associates-2.jpg" alt="CNT Associates website">
                         </div>
                         <div class="col-8">
                             <h3>CNT Associates</h3>
@@ -209,7 +209,7 @@ permalink: /clients/
                     <div id="happily-clappily-ever-laughter" class="shadow-box">
                         <div class="row">
                             <div class="col-4">
-                                <img src="images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter website">
+                                <img src="https://sybiltec.com/images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter website">
                             </div>
                             <div class="col-8">
                                 <h3>Happily Clappily Ever Laughter</h3>
@@ -235,42 +235,42 @@ permalink: /clients/
                         <!-- Logo carousel -->
         <div class="logos">
             <div class="logos-slide">
-                <img src="images/logos/low-res/blue-horizon-lnw.webp" alt="Blue Horizon LNW">
-                <img src="images/logos/low-res/cnt-associates.webp" alt="CNT Associates">
-                <img src="images/logos/low-res/crazy-thumbs.webp" alt="Crazy Thumbs">
-                <img src="images/logos/low-res/eat-club.webp" alt="Eat Club">
-                <img src="images/logos/low-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy">
-                <img src="images/logos/low-res/encalife.webp" alt="encalife">
-                <img src="images/logos/low-res/esme-learning-solutions.webp" alt="Esme Learning Solutions">
-                <img src="images/logos/low-res/events-meets-world.webp" alt="Events Meets World">
-                <img src="images/logos/low-res/focus-on-learning.webp" alt="Focus on Learning">
-                <img src="images/logos/low-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance">
-                <img src="images/logos/low-res/future-communities.webp" alt="Future Communities">
-                <img src="images/logos/low-res/gll-greenwich-leisure-limited.webp" alt="GLL Greenwich Leisure Limited">
-                <img src="images/logos/low-res/global-banking-school.webp" alt="Global Banking School">
-                <img src="images/logos/low-res/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter">
-                <img src="images/logos/low-res/jenup.webp" alt="JenUp">
-                <img src="images/logos/low-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London">
-                <img src="images/logos/low-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue">
-                <img src="images/logos/low-res/lcg-lift-consultancy.svg" alt="LCG Lift Consultancy">
-                <img src="images/logos/low-res/ld-tiling-contractors.webp" alt="LD Tiling Contractors">
-                <img src="images/logos/low-res/london-borough-of-bexley.webp" alt="London Borough of Bexley">
-                <img src="images/logos/low-res/meitam-london.webp" alt="Meitam London">
-                <img src="images/logos/low-res/nerowireart.webp" alt="NeroWireArt">
-                <img src="images/logos/low-res/new-haw-community-centre.webp" alt="New Haw Community Centre">
-                <img src="images/logos/low-res/pathways-21.webp" alt="Pathways 21">
-                <img src="images/logos/low-res/swipsearch.webp" alt="SwipSearch">
-                <img src="images/logos/low-res/the-bamboo-wardrobe.webp" alt="The Bamboo Wardrobe">
-                <img src="images/logos/low-res/the-gdpr-compliance-consultancy.webp" alt="The GDPR Compliance Consultancy">
-                <img src="images/logos/low-res/tizane.webp" alt="Tizane">
-                <img src="images/logos/low-res/together-matters.webp" alt="Together Matters">
-                <img src="images/logos/low-res/vidcareer.webp" alt="VidCareer">
-                <img src="images/logos/low-res/wan&co.webp" alt="Wan&Co">
-                <img src="images/logos/low-res/wardells-wardrobe.webp" alt="Wardell's Wardrobe">
-                <img src="images/logos/low-res/x-blu.webp" alt="x-blu">
-                <img src="images/logos/low-res/yetis-kitchen.webp" alt="Yeti's Kitchen">
-                <img src="images/logos/low-res/young-fins-swimming.webp" alt="Young Fins Swimming">
-                <img src="images/logos/low-res/yvonne-de-ville.webp" alt="Yvonne de Ville">
+                <img src="https://sybiltec.com/images/logos/low-res/blue-horizon-lnw.webp" alt="Blue Horizon LNW">
+                <img src="https://sybiltec.com/images/logos/low-res/cnt-associates.webp" alt="CNT Associates">
+                <img src="https://sybiltec.com/images/logos/low-res/crazy-thumbs.webp" alt="Crazy Thumbs">
+                <img src="https://sybiltec.com/images/logos/low-res/eat-club.webp" alt="Eat Club">
+                <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy">
+                <img src="https://sybiltec.com/images/logos/low-res/encalife.webp" alt="encalife">
+                <img src="https://sybiltec.com/images/logos/low-res/esme-learning-solutions.webp" alt="Esme Learning Solutions">
+                <img src="https://sybiltec.com/images/logos/low-res/events-meets-world.webp" alt="Events Meets World">
+                <img src="https://sybiltec.com/images/logos/low-res/focus-on-learning.webp" alt="Focus on Learning">
+                <img src="https://sybiltec.com/images/logos/low-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance">
+                <img src="https://sybiltec.com/images/logos/low-res/future-communities.webp" alt="Future Communities">
+                <img src="https://sybiltec.com/images/logos/low-res/gll-greenwich-leisure-limited.webp" alt="GLL Greenwich Leisure Limited">
+                <img src="https://sybiltec.com/images/logos/low-res/global-banking-school.webp" alt="Global Banking School">
+                <img src="https://sybiltec.com/images/logos/low-res/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter">
+                <img src="https://sybiltec.com/images/logos/low-res/jenup.webp" alt="JenUp">
+                <img src="https://sybiltec.com/images/logos/low-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London">
+                <img src="https://sybiltec.com/images/logos/low-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue">
+                <img src="https://sybiltec.com/images/logos/low-res/lcg-lift-consultancy.svg" alt="LCG Lift Consultancy">
+                <img src="https://sybiltec.com/images/logos/low-res/ld-tiling-contractors.webp" alt="LD Tiling Contractors">
+                <img src="https://sybiltec.com/images/logos/low-res/london-borough-of-bexley.webp" alt="London Borough of Bexley">
+                <img src="https://sybiltec.com/images/logos/low-res/meitam-london.webp" alt="Meitam London">
+                <img src="https://sybiltec.com/images/logos/low-res/nerowireart.webp" alt="NeroWireArt">
+                <img src="https://sybiltec.com/images/logos/low-res/new-haw-community-centre.webp" alt="New Haw Community Centre">
+                <img src="https://sybiltec.com/images/logos/low-res/pathways-21.webp" alt="Pathways 21">
+                <img src="https://sybiltec.com/images/logos/low-res/swipsearch.webp" alt="SwipSearch">
+                <img src="https://sybiltec.com/images/logos/low-res/the-bamboo-wardrobe.webp" alt="The Bamboo Wardrobe">
+                <img src="https://sybiltec.com/images/logos/low-res/the-gdpr-compliance-consultancy.webp" alt="The GDPR Compliance Consultancy">
+                <img src="https://sybiltec.com/images/logos/low-res/tizane.webp" alt="Tizane">
+                <img src="https://sybiltec.com/images/logos/low-res/together-matters.webp" alt="Together Matters">
+                <img src="https://sybiltec.com/images/logos/low-res/vidcareer.webp" alt="VidCareer">
+                <img src="https://sybiltec.com/images/logos/low-res/wan&co.webp" alt="Wan&Co">
+                <img src="https://sybiltec.com/images/logos/low-res/wardells-wardrobe.webp" alt="Wardell's Wardrobe">
+                <img src="https://sybiltec.com/images/logos/low-res/x-blu.webp" alt="x-blu">
+                <img src="https://sybiltec.com/images/logos/low-res/yetis-kitchen.webp" alt="Yeti's Kitchen">
+                <img src="https://sybiltec.com/images/logos/low-res/young-fins-swimming.webp" alt="Young Fins Swimming">
+                <img src="https://sybiltec.com/images/logos/low-res/yvonne-de-ville.webp" alt="Yvonne de Ville">
             </div>
         </div>
             </div>
