--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -224,7 +224,7 @@ permalink: /ecommerce-websites/
                 <div id="wanandco" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/clients/Wan-and-Co.jpg" alt="Wan&Co website">
+                            <img src="https://sybiltec.com/images/clients/Wan-and-Co.jpg" alt="Wan&Co website">
                         </div>
                         <div class="col-7">
                             <h2>Wan&Co</h2>
@@ -270,7 +270,7 @@ permalink: /ecommerce-websites/
                 <div id="kiko" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="images/clients/kiko-by-astons-of-london.jpg" alt="Kiko by Astons of London">                         
+                            <img src="https://sybiltec.com/images/clients/kiko-by-astons-of-london.jpg" alt="Kiko by Astons of London">                         
                         </div>
                         <div class="col-7">
                             <h2>Kiko by Astons of London</h2>
