--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                 <h2>Our Recent Clients</h2>
                 <hr>
                 <div class="row customer-logos">
-                    <div class="col-3"><img src="images/logos/low-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy"></div>
-                    <div class="col-3"><img src="images/logos/low-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance"></div>
-                    <div class="col-3"><img src="images/logos/low-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London"></div>
-                    <div class="col-3"><img src="images/logos/low-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue"></div>
+                    <div class="col-3"><img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy"></div>
+                    <div class="col-3"><img src="https://sybiltec.com/images/logos/low-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance"></div>
+                    <div class="col-3"><img src="https://sybiltec.com/images/logos/low-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London"></div>
+                    <div class="col-3"><img src="https://sybiltec.com/images/logos/low-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue"></div>
                 </div>
             </div>
         </div>
@@ -217,25 +217,25 @@
                     <div class="col-6">                    
                         <div class="slideshow-container-portfolio">
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter">
+                                <img src="https://sybiltec.com/images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Emrys-Consulting-2.jpg" alt="Emrys Consulting">
+                                <img src="https://sybiltec.com/images/clients/Emrys-Consulting-2.jpg" alt="Emrys Consulting">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/NeroWireArt-2.jpg" alt="NeroWireArt website">
+                                <img src="https://sybiltec.com/images/clients/NeroWireArt-2.jpg" alt="NeroWireArt website">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/LD-Tiling-Contractors-2.jpg" alt="LD Tiling Contractors">
+                                <img src="https://sybiltec.com/images/clients/LD-Tiling-Contractors-2.jpg" alt="LD Tiling Contractors">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/CNT-Associates-2.jpg" alt="CNT Associates">
+                                <img src="https://sybiltec.com/images/clients/CNT-Associates-2.jpg" alt="CNT Associates">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
+                                <img src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Future-Communities-UK-2.jpg" alt="Future Communities">
+                                <img src="https://sybiltec.com/images/clients/Future-Communities-UK-2.jpg" alt="Future Communities">
                             </div>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                     <div class="mySlides fade">
                         <q>As a first-time business owner, setting up a website felt like a challenge. But, Sybil made it look so effortless. She is a highly skilled website designer and assisted me in bringing my creative vision to life. I would recommend her to anyone wanting to build a website.</q>
                         <div class="center">
-                            <img src="images/logos/wan&co.webp" alt="Wan&Co logo">
+                            <img src="https://sybiltec.com/images/logos/wan&co.webp" alt="Wan&Co logo">
                         </div>
                         <h4>Maddie</h4>
                         <p class="center">Founder,<br>Wan&Co</p>
@@ -288,7 +288,7 @@
                     <div class="mySlides fade">
                         <q>Great big thanks to Sybil for supporting Eat Club with its IT audit and further systems' migration. Sybil was professional and supported us through this journey, making sure everything was completed according to the original plan. Thank you also for your patience as this was not a straightforward project.</q>
                         <div class="center">
-                            <img src="images/logos/eat-club.gif" alt="Eat Club logo">
+                            <img src="https://sybiltec.com/images/logos/eat-club.gif" alt="Eat Club logo">
                         </div>
                         <h4>Ruth Soroko</h4>
                         <p class="center">Chief Executive,<br>Eat Club</p>
@@ -304,7 +304,7 @@
                     <div class="mySlides fade">
                         <q>The final product is sleek, clean and professional looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. She managed our expectations beautifully and delivered a service which is best characterised by 'above and beyond'. Sybil simply delivered; she certainly commits her knowledge, skill and innovative entrepreneurial mind to benefit for her customer.</q>
                         <div class="center">
-                            <img src="images/logos/nerowireart.png" alt="Nerowireart logo">
+                            <img src="https://sybiltec.com/images/logos/nerowireart.png" alt="Nerowireart logo">
                         </div>
                         <h4>Dr Zita Stone</h4>
                         <p class="center">Founder,<br>Nerowireart</p>
@@ -379,7 +379,7 @@
                     <div class="col-4">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">
-                                <img src="images/white-and-blue-analogue-tachometer-gauge.jpg" 
+                                <img src="https://sybiltec.com/images/white-and-blue-analogue-tachometer-gauge.jpg" 
                                 alt="White and blue analogue tachometer gauge"></a>
                             <div class="blog-card-text">                    
                                 <h3>8 Ways to Speed Up Your Windows PC</h3>
@@ -393,7 +393,7 @@
                     </div>
                     <div class="col-4">  
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/user-experience-ux/"><img src="images/white-and-black-laptop-400x209.jpg" alt="White and black laptop"></a>
+                            <a href="https://sybiltec.com/user-experience-ux/"><img src="https://sybiltec.com/images/white-and-black-laptop-400x209.jpg" alt="White and black laptop"></a>
                                 <div class="blog-card-text">                      
                                 <h3>How to Improve the User Experience of Your Website</h3>
                                 <p>20 March 2024</p>
@@ -406,7 +406,7 @@
                     </div>
                     <div class="col-4">          
                         <div class="blog-card">
-                            <a href="https://sybiltec.com/accessible-website-design/"><img src="images/disabled-parking-350x183.jpg" 
+                            <a href="https://sybiltec.com/accessible-website-design/"><img src="https://sybiltec.com/images/disabled-parking-350x183.jpg" 
                                 alt="Disabled parking"></a>  
                             <div class="blog-card-text">               
                                 <h3>Accessible Website Design</h3>
@@ -431,22 +431,22 @@
                 <hr>
                 <div class="row">
                     <div class="col-2">
-                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
+                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
+                        <img src="https://sybiltec.com/images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/wix.webp" alt="Wix">
+                        <img src="https://sybiltec.com/images/logos/low-res/wix.webp" alt="Wix">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/wordpress.webp" alt="WordPress">
+                        <img src="https://sybiltec.com/images/logos/low-res/wordpress.webp" alt="WordPress">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates Ltd">
+                        <img src="https://sybiltec.com/images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates Ltd">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys">
+                        <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys">
                     </div>
                 </div>
             </div>
