--- a/install-ga4-shopify-website.html
+++ b/install-ga4-shopify-website.html
@@ -195,31 +195,31 @@ permalink: /install-ga4-shopify-website/
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <em>Web stream</em> details page in your Google Analytics account.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
                 <p>From your Shopify admin, go to <em>Online Store</em> > <em>Preferences</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/shopify-online-store-preferences.png" alt="Shopify online store preferences">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/shopify-online-store-preferences.png" alt="Shopify online store preferences">
 
                 <p>Scroll down to the <em>Google Analytics</em> section and click <em>Manage pixel here</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/shopify-manage-pixel-here.png" alt="Shopify Google Analytics manage pixel here">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/shopify-manage-pixel-here.png" alt="Shopify Google Analytics manage pixel here">
 
                 <p>Click <em>Add sales channel</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/shopify-add-google-and-youtube.png" alt="Shopify add Google & YouTube sales channel">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/shopify-add-google-and-youtube.png" alt="Shopify add Google & YouTube sales channel">
 
                 <p>Select the Google account that owns your GA4 property.</p>
 
-                <img class="screenshot" src="images/screenshots/shopify-google-channel.png" alt="Choose an account to continue to Google Channel by Shopify">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/shopify-google-channel.png" alt="Choose an account to continue to Google Channel by Shopify">
 
                 <p>Click <em>Allow</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/shopify-trust-google-channel.png" alt="Shopify trust Google Channel">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/shopify-trust-google-channel.png" alt="Shopify trust Google Channel">
 
                 <p>In the <em>Connect a Google Analytics property</em> section, select the GA4 property from the dropdown and click the <em>Connect</em> button.</p>
 
-                <img class="screenshot" src="images/screenshots/shopify-connect-google-analytics-property.png" alt="Shopify connect a Google Analytics property">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/shopify-connect-google-analytics-property.png" alt="Shopify connect a Google Analytics property">
 
             </div>
         </div>
