--- a/install-ga4-wix-website.html
+++ b/install-ga4-wix-website.html
@@ -195,29 +195,29 @@ permalink: /install-ga4-wix-website/
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <em>Web stream</em> details page in your Google Analytics account.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
                 <p>Log into your Wix website. In the search bar, type <em>Google Analytics</em> and click the <em>Marketing Integrations</em> result from the dropdown.</p>
 
-                <img class="screenshot" src="images/screenshots/wix-search-bar-google-analytics.png" alt="Wix search bar google analytics">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/wix-search-bar-google-analytics.png" alt="Wix search bar google analytics">
 
                 <p>On the <em>Marketing Integrations</em> page, in the Google Analytics box, click on the <em>Connect</em> or <em>View</em> button.</p>
 
-                <img class="screenshot" src="images/screenshots/wix-google-analytics-connect.png" alt="Wix connectGoogle Analytics">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/wix-google-analytics-connect.png" alt="Wix connectGoogle Analytics">
                 <br>
-                <img class="screenshot" src="images/screenshots/wix-google-analytics-view.png" alt="Wix view Google Analytics">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/wix-google-analytics-view.png" alt="Wix view Google Analytics">
 
                 <p>If you don't have GA connected already, click the <em>Add Google Analytics ID</em> button.</p>
 
-                <img class="screenshot" src="images/screenshots/wix-add-google-analytics-id.png" alt="Wix add Google Analytics ID">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/wix-add-google-analytics-id.png" alt="Wix add Google Analytics ID">
 
                 <p>Otherwise, if GA is connected already, click the three dots in the top right-hand corner and click <em>Edit</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/wix-google-analytics-edit.png" alt="Wix edit Google Analytics">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/wix-google-analytics-edit.png" alt="Wix edit Google Analytics">
 
                 <p>Enter your measurement ID in the box, and click the <em>Save</em> button.</p>
 
-                <img class="screenshot" src="images/screenshots/wix-add-your-google-analytics-code.png" alt="Wix add your Google Analytics code">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/wix-add-your-google-analytics-code.png" alt="Wix add your Google Analytics code">
             </div>
         </div>
         <div class="contact section">
