--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -195,7 +195,7 @@ permalink: /install-ga4-wordpress-website/
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <em>Web stream</em> details page in your Google Analytics account.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-web-stream-details.png" alt="Google Analytics web stream details">
 
                 <p>Log into your WordPress admin.</p>
 
@@ -203,31 +203,31 @@ permalink: /install-ga4-wordpress-website/
 
                 <p>Click <em>Install Now</em>, and then activate the plugin.</p>
 
-                <img class="screenshot" src="images/screenshots/wordpress-monsterinsights-install-now.png" alt="Install MonsterInsights">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/wordpress-monsterinsights-install-now.png" alt="Install MonsterInsights">
 
                 <p>Click the <em>Launch the Wizard!</em> button.</p>
 
-                <img class="screenshot" src="images/screenshots/getting-started-with-monsterinsights.png" alt="Getting Started With MonsterInsights">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/getting-started-with-monsterinsights.png" alt="Getting Started With MonsterInsights">
 
                 <p>Select the type of website, and click <em>Save and Continue</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/welcome-to-monsterinsights.png" alt="Welcome to MonsterInsights!">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/welcome-to-monsterinsights.png" alt="Welcome to MonsterInsights!">
 
                 <p>Click <em>Connect MonsterInsights</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/connect-monsterinsights-to-your-website.png" alt="Connect MonsterInsights to your website">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/connect-monsterinsights-to-your-website.png" alt="Connect MonsterInsights to your website">
 
                 <p>Select the Google account that owns your GA4 property.</p>
 
-                <img class="screenshot" src="images/screenshots/continue-to-monsterinsights.png" alt="Continue to MonsterInsights">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/continue-to-monsterinsights.png" alt="Continue to MonsterInsights">
 
                 <p>Click <em>Allow</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/trust-monsterinsights.png" alt="Trust MonsterInsights">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/trust-monsterinsights.png" alt="Trust MonsterInsights">
 
                 <p>Select your GA4 property from the dropdown and click <em>Complete Connection</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/monsterinsights-pick-a-profile.png" alt="MonsterInsights pick a profile">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/monsterinsights-pick-a-profile.png" alt="MonsterInsights pick a profile">
             </div>
         </div>
         <div class="contact section">
