--- a/training.html
+++ b/training.html
@@ -173,14 +173,14 @@ permalink: /training/
                 </div>
                 
                 <div class="row">
-                    <div class="col-6"><div><img src="images/sybil-mayard-consultant-conquering-social-media-day.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard, consultant at Conquering Social Media Day"></div></div>
+                    <div class="col-6"><div><img src="https://sybiltec.com/images/sybil-mayard-consultant-conquering-social-media-day.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard, consultant at Conquering Social Media Day"></div></div>
                     <div class="col-6"><p>In March 2023, as part of Start Up Business Week 2023, I participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website.</p>
                         <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.com/e/conquering-social-media-day-tickets-539198997717" target="_blank" rel="noopener noreferrer">Read More</a></div>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-6"><div><img src="images/sybil-mayard-gary-parker-at-british-library.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard and Gary Parker at the British Library"></div></div>
+                    <div class="col-6"><div><img src="https://sybiltec.com/images/sybil-mayard-gary-parker-at-british-library.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard and Gary Parker at the British Library"></div></div>
                     <div class="col-6"><p>On 25 April 2023, my colleague Gary Parker and I delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em>, in association with the British Library.</p>
                         <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/funding-and-opportunities-for-e-commerce-free-live-event-tickets-566384680827" target="_blank" rel="noopener noreferrer">Read More</a></div>
                     </div>
