--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -166,7 +166,7 @@ permalink: /web-design-bexley/
                         Web Design for Bexley Small Businesses
                     </li>
                 </ol>
-                <img class="screenshot" width="400" src="images/web-design-bexley.png" alt="Web design Bexley Borough, CNT Associates, Talking Business">
+                <img class="screenshot" width="400" src="https://sybiltec.com/images/web-design-bexley.png" alt="Web design Bexley Borough, CNT Associates, Talking Business">
                 <h2>Need Support With Your Website?</h2>
                 <p>Running a business can be challenging, but you don't have to do it alone. If you are a small business owner or sole trader based in <a href="https://www.bexley.gov.uk/" target="_blank" rel="noopener noreferrer"><strong>Bexley</strong></a>, and you are seeking help with web design or your digital presence, you may be eligible to receive funded support via the new <em>Talking Business - Business Support</em> programme.</p>
                 <p>The programme, which launched in late 2023, is designed to help create 'good growth' for small businesses across the borough. Talking Business is fully funded by the Government's UK Shared Prosperity Fund (UKSPF).</p>
@@ -406,16 +406,16 @@ permalink: /web-design-bexley/
 
                 <div class="row">
                     <div class="col-3">
-                       <img src="images/logos/TB-Business-Support.png" alt="Bexley Talking Business - Business Support">
+                       <img src="https://sybiltec.com/images/logos/TB-Business-Support.png" alt="Bexley Talking Business - Business Support">
                     </div>
                     <div class="col-3">
-                       <img src="images/logos/BexLog_A4_col-NEWbluestrapline18.png" alt="Bexley logo">
+                       <img src="https://sybiltec.com/images/logos/BexLog_A4_col-NEWbluestrapline18.png" alt="Bexley logo">
                     </div>
                     <div class="col-3">
-                       <img src="images/logos/BBE-Funded-GOV-800-450-2.png" alt="BBE government funded">
+                       <img src="https://sybiltec.com/images/logos/BBE-Funded-GOV-800-450-2.png" alt="BBE government funded">
                     </div>
                     <div class="col-3">
-                       <img src="images/logos/CNT-Associates-empowering-your-vision-300x98.png" alt="CNT Associates logo">
+                       <img src="https://sybiltec.com/images/logos/CNT-Associates-empowering-your-vision-300x98.png" alt="CNT Associates logo">
                     </div>
                 </div>
 
