--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -203,7 +203,7 @@ permalink: /web-design-surrey/
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">                         
+                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">                         
                         </div>
                         <div class="col-7">
                             <h2>New Haw Community Centre, Woodham</h2>
