--- a/about.html
+++ b/about.html
@@ -232,12 +232,12 @@ permalink: /about/
                     <div class="row">
                         <div class="col-3">
                             <h4>Foundations of User Experience (UX) Design</h4>
-                                <img src="images/certifications/coursera-google-foundations-of-user-experience-ux-design.png"
+                                <img src="https://sybiltec.com/images/certifications/coursera-google-foundations-of-user-experience-ux-design.png"
                                     alt="Coursera Google Foundations of User Experience (UX) Design certificate">
                         </div>
                         <div class="col-3">
                             <h4>The Complete 2022 Software Testing Bootcamp</h4>
-                            <img src="images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpg"
+                            <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpg"
                                     alt="Udemy The Complete 2022 Software Testing Bootcamp">
                         </div>
                         <div class="col-3">
@@ -246,7 +246,7 @@ permalink: /about/
                         </div>
                         <div class="col-3">
                             <h4>The Fundamentals of Digital Marketing</h4>
-                            <img src="images/certifications/google-digital-garage-fundamentals-of-digital-marketing.png"
+                            <img src="https://sybiltec.com/images/certifications/google-digital-garage-fundamentals-of-digital-marketing.png"
                                     alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
                         </div>
                     </div>
