--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -195,11 +195,11 @@ permalink: /upgrade-google-analytics-4/
 
                 <p>Not sure which version of Google Analytics you are using? Sign into Google Analytics with your Gmail account. In the top left-hand corner click the menu (to the right of the Analytics logo):</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-1.png" alt="Google Analytics homepage">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-1.png" alt="Google Analytics homepage">
 
                 <p>The menu will open. Check the <em>Properties & Apps</em> column. The property IDs are displayed below each property. If the ID begins with "UA", then it is a Universal Analytics property. Otherwise, it is a GA4 property.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-2.png" alt="Google Analytics Properties & Apps">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-2.png" alt="Google Analytics Properties & Apps">
 
                 <h2>How to Create a GA4 Property</h2>
 
@@ -208,45 +208,45 @@ permalink: /upgrade-google-analytics-4/
                 <div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/zvIf9mCfLIo?si=-3-BwZsqqlaEoqC-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
                 <p>In the bottom left-hand corner, click the <em>Admin</em> icon.</p>
-                <img class="screenshot" src="images/screenshots/google-analytics-admin.png" alt="Google Analytics Admin">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-admin.png" alt="Google Analytics Admin">
 
                 <p>Click the blue <em>Create Property</em> button.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-create-property.png" alt="Google Analytics property management">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-create-property.png" alt="Google Analytics property management">
 
                 <p>Enter a meaningful name for your property, and select the time zone and the currency. Then click <em>Next</em>. </p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-create-property-2.png" alt="Google Analytics create a property">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-create-property-2.png" alt="Google Analytics create a property">
 
                 <p>Select the industry category and the business size. Click <em>Next</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-describe-your-business.png" alt="Google Analytics describe your business">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-describe-your-business.png" alt="Google Analytics describe your business">
 
                 <p>On this page, choose one or more business objectives. Then click <em>Create</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-choose-your-business-objectives.png" alt="Google Analytics choose your business objectives">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-choose-your-business-objectives.png" alt="Google Analytics choose your business objectives">
 
                 <p>Choose the platform that you would like to collect data for <em>(Web)</em>:</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-start-collecting-data.png" alt="Google Analytics start collecting data">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-start-collecting-data.png" alt="Google Analytics start collecting data">
 
                 <p>Enter your website's URL, and enter a stream name. Click <em>Create stream</em>.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-set-up-data-stream.png" alt="Google Analytics set up data stream">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-set-up-data-stream.png" alt="Google Analytics set up data stream">
 
                 <h2>How to Install the Tracking Code on Your Website</h2>
 
                 <p>You will be presented with the installation instructions.</p> 
 
-                <img class="screenshot" src="images/screenshots/google-analytics-installation-instructions.png" alt="Google Analytics installation instructions">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-installation-instructions.png" alt="Google Analytics installation instructions">
 
                 <p>Google can attempt to automatically detect your website's platform if you click the <em>Scan</em> button. If that does not work, you can select one of the platforms listed at the bottom. For example, if you have a Wix website, click the <em>Wix</em> button. Then if you scroll down, you will see the instructions for installing the analytics code on your Wix website.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-website-platform.png" alt="Google Analytics website platform">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-website-platform.png" alt="Google Analytics website platform">
 
                 <p>If your platform is not listed, you can click the <em>Install manually</em> tab. This will show you the tracking code - copy this code and paste it into every page of your website, immediately after the <em>head</em> tag. </p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-install-manually.png" alt="Google Analytics install manually">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-install-manually.png" alt="Google Analytics install manually">
 
                 <h3>Need More Help?</h3>
                 <p>Check out my articles below which explain in more detail how to install GA4 on the most popular website builders:</p>
@@ -262,7 +262,7 @@ permalink: /upgrade-google-analytics-4/
 
                 <p>In Google Analytics, return to the homepage. Observe the <em>Users in Last 30 Minutes</em> report. After a few minutes, you should see some data showing up in this report. If not, double-check that you have installed the tracking code correctly.</p>
 
-                <img class="screenshot" src="images/screenshots/google-analytics-users-in-last-30-minutes.png" alt="Google Analytics users in last 30 minutes">
+                <img class="screenshot" src="https://sybiltec.com/images/screenshots/google-analytics-users-in-last-30-minutes.png" alt="Google Analytics users in last 30 minutes">
             </div>
         </div>
         <div class="contact section">
