--- a/website-design.html
+++ b/website-design.html
@@ -198,7 +198,7 @@ permalink: /website-design/
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">                         
+                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">                         
                         </div>
                         <div class="col-7">
                             <h2>New Haw Community Centre</h2>
@@ -218,7 +218,7 @@ permalink: /website-design/
                 <div id="kiko" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="images/clients/kiko-by-astons-of-london.jpg" alt="Kiko by Astons of London">                         
+                            <img src="https://sybiltec.com/images/clients/kiko-by-astons-of-london.jpg" alt="Kiko by Astons of London">                         
                         </div>
                         <div class="col-7">
                             <h2>Kiko by Astons of London</h2>
@@ -240,7 +240,7 @@ permalink: /website-design/
                 <div id="emrys-consulting" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/clients/Emrys-Consulting-4.jpg" alt="Emrys Technology & Consultancy">
+                            <img src="https://sybiltec.com/images/clients/Emrys-Consulting-4.jpg" alt="Emrys Technology & Consultancy">
                         </div>
                         <div class="col-7">
                             <h2>Emrys Technology & Consultancy</h2>
